WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254971
Apply Pay buttons don't paint in BifurcatedGraphicsContext's secondary context
https://bugs.webkit.org/show_bug.cgi?id=254971
Summary
Apply Pay buttons don't paint in BifurcatedGraphicsContext's secondary context
Tim Horton
Reported
2023-04-03 22:20:00 PDT
Apply Pay buttons don't paint in BifurcatedGraphicsContext's secondary context
Attachments
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2023-04-03 22:20:02 PDT
<
rdar://problem/106769942
>
Tim Horton
Comment 2
2023-04-03 22:21:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12362
EWS
Comment 3
2023-04-03 23:06:47 PDT
Committed
262565@main
(c4e9683ab8e0): <
https://commits.webkit.org/262565@main
> Reviewed commits have been landed. Closing PR #12362 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug