Apply Pay buttons don't paint in BifurcatedGraphicsContext's secondary context https://bugs.webkit.org/show_bug.cgi?id=254971 rdar://106769942

Reviewed by Aditya Keerthi.

* Source/WebCore/platform/graphics/BifurcatedGraphicsContext.cpp:
(WebCore::BifurcatedGraphicsContext::drawControlPart):
* Source/WebCore/platform/graphics/BifurcatedGraphicsContext.h:
Add an override and bifurcate `drawControlPart`.

Canonical link: https://commits.webkit.org/262565@main